# keypad

./: Cargo.toml  README.md  flake.nix  keypad-config.toml  keypad.py  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  flake-update.yml
nix/: default.nix
src/: action.rs  cli.rs  config.rs  keypad.rs  konst.rs  main.rs  util.rs
