[package]
name = "keypad"
version = "0.1.0"
edition = "2024"

publish = false

[dependencies]
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5.34", features = ["derive", "cargo"] }
clap-verbosity-flag = "3.0.2"
cloudmqtt = { git = "https://github.com/TheNeikos/cloudmqtt", branch = "main" }
dashmap = "6.1"
futures = "0.3.31"
hex = "0.4"
human-panic = "2.0.2"
humantime = "2.2.0"
humantime-serde = "1.1.1"
miette = { version = "7.5", features = ["fancy"] }
mqtt-format = { git = "https://github.com/TheNeikos/cloudmqtt", branch = "main" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "2"
tokio = { version = "1", features = ["net", "fs", "macros", "rt", "signal"] }
tokio-util = "0.7.15"
toml = "0.8.19"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xdg = "2.5.2"
